@@ -1,6 +1,13 @@
 2008-11-23 Braden McDaniel  <braden@endoframe.com>
 
 	Use trailing underscore convention for private variables in
+	openvrml::local::proto_node.
+
+	* src/libopenvrml/openvrml/local/proto.cpp
+
+2008-11-23 Braden McDaniel  <braden@endoframe.com>
+
+	Use trailing underscore convention for private variables in
 	openvrml::local::proto_node_metatype.
 
 	* src/libopenvrml/openvrml/local/proto.cpp
